[package]
name = "xefetch"
version = "0.1.0"
authors = ["RustedTerrier <RustedTerrier@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'
